[package]
name = "kvs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.18", features = ["derive"]}
failure = "0.1.8"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
log = "0.4.22"
env_logger = "0.11.5"
sled = "0.34.7"
rayon = "1.0.3"
crossbeam = "0.8.4"
crossbeam-utils = "0.8.20"
crossbeam-skiplist = "0.1.3"
tokio = { version = "1.40.0", features = ["full"]}
tokio-serde = "0.9.0"
tokio_util = "0.7.12"



[dev-dependencies]
assert_cmd = "2.0.16"
criterion = "0.5.1"
predicates = "3.1.2"
rand = { version = "0.8.5", features = ["small_rng"]}
tempfile = "3.13.0"
walkdir = "2.5.0"
panic-control = "0.1.4"

[[bench]]
name = "engine_bench"
harness = false
